# webrtc_with_libnice_and_srtp

./: CMakeLists.txt  ReadMe.txt  build.sh
doc/: Makefile  build.txt  buildhimi.txt  buildx86.txt  debugChrome.bat  h264.bat  libnice分析.docx  linux.cache  my.pcapng  my2.pcapng  offer.pcapng  协议.txt
example/: CMakeLists.txt  CMakeListsClient.txt  CMakeListsServer.txt  build.sh  buildClient.sh  buildServer.sh  http_interface.h  main.c  main.cpp  peerconnection_client_main.cpp  rtp_interface.c  rtp_interface.cpp  rtp_interface.h  signalling_interface.cpp  signalling_interface.h  webrtc_client_main.cpp  webrtc_server_main.cpp
example/WebDemo/: VideoCall.html  index.html  nginx_webrtc_https.conf
example/base64/: Base64.cpp  CMakeLists.txt  build.sh  strDup.cpp
example/base64/include/: Base64.h  Boolean.h  strDup.h
example/http/: CMakeLists.txt  Http.cpp  Http.h  HttpClient.cpp  HttpInterface.cpp  HttpServer.cpp  TcpSocket.cpp  build.sh
example/http/include/: Http.h  HttpClient.h  HttpCommon.h  HttpServer.h  TcpSocket.h
example/media/: CMakeLists.txt  MediaAdapter.h  MediaHandle.cpp  RawAudioHandle.cpp  RawVideoHandle.cpp  build.sh
example/media/FLV/: FlvHandle.cpp  FlvHandle.h  FlvHandleInterface.cpp
example/media/demo/: CMakeLists.txt  build.sh  main.cpp
example/media/include/: MediaAdapter.h  MediaHandle.h
example/media/prj/win/MediaConvert/: MediaConvert.sln
example/media/prj/win/MediaConvert/MediaConvert/: MediaConvert.vcxproj  MediaConvert.vcxproj.filters
example/media/prj/win/libmedia/: libmedia.sln
example/media/prj/win/libmedia/libmedia/: libmedia.vcxproj  libmedia.vcxproj.filters
example/media/src/: CMakeLists.txt  MediaHandle.cpp  RawAudioHandle.cpp  RawVideoHandle.cpp  RawVideoHandle.h  build.sh
example/media/src/FLV/: FlvHandle.cpp  FlvHandle.h  FlvHandleInterface.cpp  FlvPackHandle.cpp  FlvPackHandle.h  FlvParseHandle.cpp  FlvParseHandle.h
example/media/src/FLV/include/: FlvHandleInterface.h
example/media/src/FMP4/: FMP4.cpp  FMP4.h  FMP4Handle.cpp  FMP4Handle.h  FMP4HandleInterface.cpp
example/media/src/FMP4/include/: FMP4HandleInterface.h
example/media/src/TS/: TsInterface.cpp  TsPack.cpp  TsPack.h
example/media/src/TS/include/: TsInterface.h
example/media/src/include/: MediaHandle.h
example/net/: CMakeLists.txt  TcpSocket.cpp  TcpSocketWin.cpp  UdpSocket.cpp  build.sh
example/net/include/: NetAdapter.h  TcpSocket.h
example/peerconnection_client/: CMakeLists.txt  build.sh  peerconnection_client.cpp
example/peerconnection_client/include/: peerconnection_client.h
example/peerconnection_demo/: CMakeLists.txt  build.sh  peerconnection_client_main.cpp  signalling_interface.cpp  signalling_interface.h
example/peerconnection_demo/peerconnection_client/: build.sh  peerconnection_client.cpp
example/peerconnection_demo/peerconnection_client/include/: peerconnection_client.h
example/rtp/: CMakeLists.txt  Definition.h  Rtp.cpp  Rtp.h  RtpCommon.h  RtpInterface.cpp  RtpPacket.cpp  RtpPacket.h  RtpParse.cpp  RtpParse.h  RtpSession.cpp  RtpSession.h  VideoHandle.cpp  VideoHandle.h  build.sh  rtp_interface.cpp
example/rtp/include/: Rtp.h  RtpInterface.h  rtp_adapter.h  rtp_interface.h
example/rtp/media/: MediaHandle.cpp  RawAudioHandle.cpp  RawAudioHandle.h  RawVideoHandle.cpp  RawVideoHandle.h
example/webrtc_client/: CMakeLists.txt  build.sh  webrtc_client.cpp
example/webrtc_client/include/: webrtc_client.h
example/webrtc_server/: CMakeLists.txt  build.sh  webrtc_http_session.cpp  webrtc_http_session.h  webrtc_server.cpp  webrtc_server_interface.cpp  webrtc_session.cpp  webrtc_session.h
example/webrtc_server/include/: webrtc_server.h  webrtc_server_interface.h
lib/arm-himix200-linux/glib_2.48.0/lib/: libgio-2.0.la  libglib-2.0.la  libglib-2.0.so.0.4800.0  libgmodule-2.0.la  libgobject-2.0.la  libgthread-2.0.la
lib/arm-himix200-linux/glib_2.48.0/lib/pkgconfig/: gio-2.0.pc  gio-unix-2.0.pc  glib-2.0.pc  gmodule-2.0.pc  gmodule-no-export-2.0.pc  gobject-2.0.pc  (+1 more)
lib/arm-himix200-linux/libffi_v3.2.1/lib/: libffi.la  libffi.so.6.0.4
lib/arm-himix200-linux/libnice_0.1.16/lib/: libnice.la  libnice.so.10.9.0
lib/arm-himix200-linux/openssl-1.1.1d/lib/: libcrypto.so.1.1  libssl.so.1.1
lib/arm-himix200-linux/zlib_v1.2.11/lib/: libz.so.1.2.11
lib/arm-hisiv200-linux/glib/lib/: libgio-2.0.la  libglib-2.0.la  libglib-2.0.so.0.4800.0  libgmodule-2.0.la  libgmodule-2.0.so.0.4800.0  libgobject-2.0.la  libgobject-2.0.so.0.4800.0  libgthread-2.0.la  libgthread-2.0.so.0.4800.0
lib/arm-hisiv200-linux/glib_2.48.0/lib/: libgio-2.0.la  libglib-2.0.la  libglib-2.0.so.0  libgmodule-2.0.la  libgmodule-2.0.so.0.4800.0  libgobject-2.0.la  libgobject-2.0.so.0  libgthread-2.0.la
lib/arm-hisiv200-linux/libffi/lib/: libffi.la
lib/arm-hisiv200-linux/libffi_v3.2.1/lib/: libffi.la
lib/arm-hisiv200-linux/libnice/lib/: libnice.la  libnice.so.10.9.0
lib/arm-hisiv200-linux/libnice_0.1.16/lib/: libnice.la
lib/arm-hisiv200-linux/openssl-1.1.1d/lib/: libcrypto.so.1.1  libssl.so.1.1
lib/arm-hisiv200-linux/openssl/lib/: libcrypto.so.1.0.0  libssl.so.1.0.0
lib/arm-hisiv200-linux/zlib/lib/: libz.so.1.2.11
lib/x86/glib_2.48.0/lib/: libgio-2.0.la  libglib-2.0.la  libgmodule-2.0.la  libgobject-2.0.la  libgobject-2.0.so.0.4800.0  libgthread-2.0.la  libgthread-2.0.so.0
lib/x86/libffi_v3.2.1/lib/: libffi.la  libffi.so.6.0.4
lib/x86/libnice_0.1.16/lib/: libnice.la  libnice.so.10
src/: CMakeLists.txt  build.sh  dtls_only_handshake.cpp  dtls_only_handshake.h  libnice_interface.c  libnice_interface.cpp  libnice_interface.h  sctp_interface.cpp  sctp_interface.h  srtp_interface.c  srtp_interface.cpp  srtp_interface.h  webrtc.c  webrtc.cpp  webrtc.h  webrtc_interface.cpp
src/include/: webrtc.h  webrtc_common.h  webrtc_interface.h
src/third_src/: build.sh  cJSON_CMakeLists.txt  cJSON_build.sh  usrsctp_CMakeLists.txt  usrsctp_build.sh
test/: TestWebRTC.go  buildAndRun.bat  buildAndRun.sh  firstBuild.bat  firstBuild.sh  go.mod  readme.md  run.bat  run.sh
test/resource/: testCamera.html  testTalk.html
test/services/: HttpSever.go  go.mod
(+184 files in other folders)
